--- a/backends/auth-service/src/main/resources/application.properties
+++ b/backends/auth-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=auth-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/social_network
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
@@ -7,3 +7,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8081
 logging.level.org.springframework.security=DEBUG
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.version=1.0.0
