--- a/backends/postservice/src/main/resources/application.properties
+++ b/backends/postservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=postservice
-spring.datasource.url=jdbc:postgresql://localhost:5432/postdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/social_network
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
