--- a/backends/user-profile-service/src/main/resources/application.properties
+++ b/backends/user-profile-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=user-profile-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/social_network
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
